# Snake

./: .gitignore  CMakeLists.txt  Makefile  README.md  bot.c  bot.h  definitions.h  main.c  makefile  types.c  types.h  utilities.c  utilities.h
